--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
+    "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.11.4",
