--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.11.4",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
+    "signature_pad": "^5.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
