--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.11.4",
     "react-datepicker": "^6.9.0",
